sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 0xa0 0xff dummy
simstep 49 1
